--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "sass-loader": "^12.3.0",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
 }
