--- a/package.json
+++ b/package.json
@@ -18,17 +18,23 @@
   },
   "homepage": "https://github.com/zcrutcher/elm-news#readme",
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.16.0",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "elm-webpack-loader": "^8.0.0",
     "html-webpack-plugin": "^5.5.0",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
-    "webpack": "^5.61.0",
+    "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "style-loader": "^3.3.1",
+    "webpack-dev-server": "^4.4.0"
   }
 }
