--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
+    "babel-elm-assets-plugin": "^1.2.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "style-loader": "^3.3.1",
