--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-server": "npx webpack-dev-server --config=config/webpack.dev.js",
+    "dev-webpack": "npx webpack --config=config/webpack.dev.js"
   },
   "repository": {
     "type": "git",
