--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev-server": "npx webpack-dev-server --config=config/webpack.dev.js",
-    "dev-webpack": "npx webpack --config=config/webpack.dev.js"
+    "dev-start": "npx webpack-dev-server --config=config/webpack.dev.js",
+    "dev-webpack": "rm -rf dist && npx webpack --config=config/webpack.dev.js",
+    "start": "node ./src/server.js",
+    "webpack": "rm -rf dist && npx webpack --config=config/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +38,7 @@
     "babel-elm-assets-plugin": "^1.2.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "html-loader": "^3.0.1",
     "style-loader": "^3.3.1",
     "webpack-dev-server": "^4.4.0"
   }
